# quill

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yml
design/: README.md  quill-desktop.pen
docs/: privacy.md
docs/arch/: overview.md
docs/features/: 01-product-spec.md  02-ai-quick-explain.md  03-ai-thinking-mode.md  04-openai-oauth.md  05-ai-lookup.md  06-icloud-sync.md  07-highlights.md  08-vocab-management.md  09-chat-persistence.figma.md  09-chat-persistence.md  10-pdf-support.md  11-i18n.md  12-auto-update.md  13-settings-modal.md  14-notes.md  146-pdf-scroll-mode.md  15-ai-translation.md  17-voice-tts.md  18-ai-summarization.md  198-per-book-window-zoom.md  20-multi-window-reader.md  21-ai-auto-sort-collections.md  243-separate-updates-from-about.md  25-collection-folders.md  257-persist-explanations.md  26-smooth-pdf-page-transitions.md  260-toc-side-panel.md  261-disable-sync-copy-progress.md  262-softer-dark-theme-palette.md  27-reading-stats.md  284-mcp-batch-library-collection-tools.md  285-group-chats-and-words-under-memos.md  29-cli-ai-providers.md  294-codex-model-picker.md  30-mcp-server.md  32-library-backup.md  README.md
docs/guide/: 001-foliate-migration.md  README.md
docs/impls/: 119-per-book-reader-settings.md  123-standalone-chat-view.md  140-vocab-detail.md  15-ai-translation.md  215-explain-and-quote.md  232-mcp-pdf-cover.md  24-edit-book-metadata.md  240-flush-worker.md  244-async-sync-boot.md  246-download-progress.md  247-covers-in-db.md  263-reading-tools-consolidation.md  286-explicit-lookup-language.md  30-mcp-server.md  31-sync.md  README.md  auto-update.md  backend-implementation-plan.md  bilingual-lookup.md  chat-persistence.md  close-reader-windows-on-main-close.md  icloud-sync-phase3-4.md  icloud-sync-phase5-design-prompt.md  multi-window-reader.md  openai-oauth-implementation-plan.md  pdf-support.md  settings-modal.md
docs/issues/: pdf-highlights.md
docs/roadmap/: README.md  milestone1-mvp.md  milestone2-depth.md  milestone3-companion.md  stage1-mvp.md  stage2-depth.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_vocab.sql  003_chats.sql  004_pdf_support.sql  005_collection_sort_order.sql  006_translations.sql  007_book_settings.sql  008_drop_book_settings.sql  009_normalize_timestamps.sql  010_replay_state.sql  011_lww_tiebreak_and_outbox.sql  012_vocab_context_explanation.sql  013_covers_in_db.sql
src-tauri/src/: db.rs  epub.rs  error.rs  icloud.rs  lib.rs  main.rs  panic_hook.rs  pdfium.rs  secrets.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  oauth.rs  openai_compat.rs  openai_responses.rs
src-tauri/src/commands/: ai.rs  app.rs  bookmarks.rs  books.rs  chats.rs  collections.rs  icloud.rs  mcp.rs  mod.rs  oauth.rs  settings.rs  sync.rs  translation.rs  vocab.rs
src-tauri/src/mcp/: mod.rs  notify.rs  server.rs  state.rs
src-tauri/src/mcp/tools/: bookmarks.rs  chats.rs  collections.rs  highlights.rs  library.rs  mod.rs  translations.rs  vocab.rs
src-tauri/src/sync/: device.rs  events.rs  log.rs  merge.rs  migration.rs  mod.rs  peers.rs  replay.rs  snapshot.rs  watcher.rs  writer.rs
src-tauri/tests/: mcp_binary.rs  minimax_api.rs
src/components/: AiPanel.tsx  BookContextMenu.tsx  BookGrid.tsx  BookList.tsx  BookmarksPanel.tsx  ChatDetailView.tsx  ChatsContent.tsx  DictionaryContent.tsx  (+22 more)
(+76 files in other folders)
