[package]
name = "quill"
version = "1.2.8"
description = "An AI-powered ebook reader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
epub = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net", "io-util", "time"] }
futures = "0.3"
rmcp = { version = "1.7", features = ["server", "transport-io"] }
schemars = "1"
# Codex MCP config lives in ~/.codex/config.toml; toml_edit preserves
# user-authored comments + formatting on round-trip writes (unlike the
# plain `toml` crate).
toml_edit = "0.22"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ulid = { version = "1", features = ["serde"] }
notify = "6"
gethostname = "0.5"
pdfium-render = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileManager", "NSFileCoordinator", "NSString", "NSURL", "NSError", "block2"] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
lopdf = "0.40.0"
